--- a/index.html
+++ b/index.html
@@ -1505,7 +1505,7 @@ case: "AI-Generated Case: During the audit of XYZ Ltd., the auditors noticed tha
         let startTime = 0;
 
         // --- Gemini API Configuration ---
-        const API_KEY = ""; // This will be handled by the environment.
+        const API_KEY = "AIzaSyDZVwt24mopJRWdRDJUBZj6YLr2CIGjl90"; // This will be handled by the environment.
         const API_URL_GEMINI = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=${API_KEY}`;
 
         
