--- a/index.html
+++ b/index.html
@@ -1505,8 +1505,8 @@ case: "AI-Generated Case: During the audit of XYZ Ltd., the auditors noticed tha
         let startTime = 0;
 
         // --- Gemini API Configuration ---
-        const API_KEY = "AIzaSyDZVwt24mopJRWdRDJUBZj6YLr2CIGjl90"; // This will be handled by the environment.
-        const API_URL_GEMINI = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=${API_KEY}`;
+        const API_KEY = "AIzaSyAUmhfDgUhwJx6d0g6hTRhI8LSzwXy8v1U"; // This will be handled by the environment.
+        const API_URL_GEMINI = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=${AIzaSyAUmhfDgUhwJx6d0g6hTRhI8LSzwXy8v1U}`;
 
         
         // --- Quiz Functions ---
